<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IZF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="IZF_address">Eschborner Land Straße 79\n
60489 Frankfurt am Main\nGermany</string>
<string name="IZF_tel">Tel:	+49 69 90744290</string>
<string name="IZF_fax">
Fax:	+49 69 907442929</string>
<string name="IZF_Email">
E-Mail:	office@izfrankfurt.de</string>
<string name="copyright">Copyright © 2014.</string>
<string name="designers">Jalal Khademi, Majid Sobhani</string>

	<string name="Fajr">Morgendämmerung:</string>
    <string name="Sobh">Sonnenaufgang:</string>
    <string name="Zohr">Mittag:</string>    
    <string name="Maghrib">Maghrib:</string>


</resources>
