<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@drawable/about_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtAddress" 
            android:padding="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/IZF_address"/>
        <TextView android:textAppearance="?android:textAppearanceLarge" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtTel" 
            android:padding="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/IZF_tel"/>
        <TextView android:textAppearance="?android:textAppearanceLarge" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtFax" 
            android:padding="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/IZF_fax" />
        <TextView android:textAppearance="?android:textAppearanceLarge" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtEmail" 
            android:padding="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/IZF_Email" />
        <TextView android:textAppearance="?android:textAppearanceMedium" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtCopyright" 
            android:paddingTop="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/copyright" />
        <TextView android:textAppearance="?android:textAppearanceMedium" 
            android:textSize="15.0sp" 
            android:textColor="@color/DarkGrey" 
            android:layout_gravity="center" 
            android:id="@+id/txtDesigners" 
            android:paddingBottom="10.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/designers" />
    </LinearLayout>
</LinearLayout>